hphp/hack/test/typecheck/reified_generics/memoize_soft_reified.php.exp
File "memoize_soft_reified.php", line 13, characters 10-10:
The <<__Memoize>> attribute cannot be used on a function or method that has reified type parameters (Typing[4311])
File "memoize_soft_reified.php", line 9, characters 26-27:
The <<__Memoize>> attribute cannot be used on a function or method that has reified type parameters (Typing[4311])
File "memoize_soft_reified.php", line 6, characters 19-19:
The <<__Memoize>> attribute cannot be used on a function or method that has reified type parameters (Typing[4311])
